# groupme-rs

./: Cargo.toml
src/: client.rs  data.rs  lib.rs
